fixed colour issue dark mode

--- a/src/styles/components/tab-menu.css
+++ b/src/styles/components/tab-menu.css
@@ -11,7 +11,3 @@
   margin-right: 10px;
   padding: 3px;
 }
-
-.select-element-active > svg {
-  fill: #4280EC;
-}
